<resources>

    <string name="app_name">Touch</string>
    <string name="home">Home</string>
    <string name="world">World</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="sort_by">Sory By</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <!-- Strings related to Settings -->

    <string name="pref_support_title">support</string>
    <string name="pref_support_policy">Privacy Policy</string>
    <string name="pref_support_license">License</string>


    <string name="pref_language_title">Language</string>
    <string name="pref_language_english">English</string>
    <string name="pref_language_persian">Persian/English</string>

    <string name="pref_account_title">Account</string>
    <string name="pref_account_firstname">First Name</string>
    <string name="pref_account_lastname">Last Name</string>
    <string name="pref_account_id">Id</string>
    <string name="pref_account_biography">Biography</string>
    <string name="pref_edittext_defualt_value"></string>

    <string name="pref_logout">Logout</string>
    <string name="license">Open source libraries</string>
    <string name="privacy_policy">Privacy and Policy</string>
    <string name="please_exit_and_re_open">Please close touch and re-open it</string>
    <string name="connecting">Connecting ...</string>
    <string name="seeds_sentence">If You Have A Plan So Don\'t Do It Alone !</string>

    <!-- String related to toolbar -->

</resources>
