<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="start">
    <PreferenceCategory
        android:title="@string/pref_account_title"
        android:key="Account"
        android:gravity="start">
        <EditTextPreference
            android:defaultValue="@string/pref_edittext_defualt_value"
            android:title="@string/pref_account_firstname"
            android:key="First name"
            android:gravity="center"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_edittext_defualt_value"
            android:title="@string/pref_account_lastname"
            android:key="Last name"
            android:inputType="text"
            android:gravity="start"
            android:maxLines="1"
            android:selectAllOnFocus="true">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_edittext_defualt_value"
            android:title="@string/pref_account_id"
            android:key="Id"
            android:inputType="text"
            android:gravity="start"
            android:maxLines="1"
            android:selectAllOnFocus="true">
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="@string/pref_edittext_defualt_value"
            android:title="@string/pref_account_biography"
            android:key="Biography"
            android:gravity="start"
            android:inputType="text"
            android:selectAllOnFocus="true">
        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_language_title"
        android:key="Language"
        android:gravity="start">

        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/pref_language_persian"
            android:id="@+id/lang_switch"
            android:gravity="start"
            android:key="Persian">
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_support_title"
        android:gravity="start"
        android:key="Support">
        <PreferenceScreen
            android:gravity="start"
            android:title="@string/pref_support_policy"
            android:key="Privacy Policy">
            <PreferenceScreen
                android:gravity="start"
                android:layout="@layout/privacy_policy">
            </PreferenceScreen>
        </PreferenceScreen>
        <PreferenceScreen
            android:gravity="start"
            android:title="@string/pref_support_license"
            android:key="license">
            <PreferenceScreen
                android:gravity="start"
                android:layout="@layout/license">
            </PreferenceScreen>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:gravity="start"
            android:title="@string/pref_logout"
            android:key="logout">
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>